# neovim-gtk

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  build.rs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
desktop/: nvim-gtk.desktop  org.daa.NeovimGtk.desktop
resources/: menu.ui  plug-manager.ui  side-panel.ui
runtime/plugin/: nvim_gui_shim.vim
src/: cmd_line.rs  color.rs  cursor.rs  dirs.rs  error.rs  file_browser.rs  grid.rs  highlight.rs  input.rs  main.rs  misc.rs  mode.rs  nvim.rs  nvim_config.rs  popup_menu.rs  project.rs  settings.rs  shell.rs  shell_dlg.rs  subscriptions.rs  tabline.rs  theme.rs  ui.rs  ui_model.rs  ui_mutex.rs  value.rs
src/nvim/: client.rs  cmd_line.rs  ext.rs  handler.rs  mod.rs  mode_info.rs  redraw_handler.rs  repaint_event.rs  repaint_mode.rs
src/plug_manager/: manager.rs  mod.rs  plugin_settings_dlg.rs  store.rs  ui.rs  vim_plug.rs  vimawesome.rs
src/render/: context.rs  itemize.rs  mod.rs  model_clip_iterator.rs
src/sys/: mod.rs
src/sys/pango/: analysis.rs  attr_iterator.rs  attribute.rs  item.rs  mod.rs
src/sys/pangocairo/: mod.rs
src/ui_model/: cell.rs  item.rs  line.rs  mod.rs  model_layout.rs  model_rect.rs
