[package]
name = "nvim-gtk"
version = "0.2.0"
authors = ["daa84 <daa84@inbox.ru>"]
build = "build.rs"

[dependencies]
cairo-rs = "0.3"
pango = "0.3"
pango-sys = "0.5"
pangocairo = "0.4"
pangocairo-sys = "0.6"
glib = "0.4"
glib-sys = "0.5"
gdk = "0.7"
gdk-sys = "0.5"
gio = "0.3"
gobject-sys = "0.5"
#gdk = { git = 'https://github.com/gtk-rs/gdk' }
#gdk-sys = { git = 'https://github.com/gtk-rs/sys' }
#glib = { git = 'https://github.com/gtk-rs/glib' }
#glib-sys = { git = 'https://github.com/gtk-rs/sys' }
#cairo-rs = { git = 'https://github.com/gtk-rs/cairo' }
#cairo-sys-rs = { git = 'https://github.com/gtk-rs/cairo' }
#pango = { git = 'https://github.com/gtk-rs/pango' }
#pango-sys = { git = 'https://github.com/gtk-rs/sys' }
#gio = { git = 'https://github.com/gtk-rs/gio' }
#pangocairo = { git = 'https://github.com/RazrFalcon/pangocairo-rs' }
neovim-lib = "0.5"
phf = "0.7"
log = "0.4"
env_logger = "0.4"
htmlescape = "0.3"

serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
serde_json = "1.0"

#[dependencies.neovim-lib]
#git = "https://github.com/daa84/neovim-lib"

[build-dependencies]
phf_codegen = "0.7"

[dependencies.gtk]
version = "0.3"
features = ["v3_22"]
#git = "https://github.com/gtk-rs/gtk"

[dependencies.gtk-sys]
version = "0.5"
features = ["v3_22"]
#git = 'https://github.com/gtk-rs/sys'

