[package]
name = "nvim-gtk"
version = "0.3.0"
authors = ["daa84 <daa84@inbox.ru>"]
build = "build.rs"
edition = "2018"

[dependencies]
clap = "2.33"
cairo-rs = "0.7"
pango-sys = "0.9"
pangocairo = "0.8"
pangocairo-sys = "0.10"
glib = "0.8.0"
glib-sys = "0.9"
gdk = "0.11"
gdk-sys = "0.9"
gio = "0.7.0"
gobject-sys = "0.9"
#gdk = { git = 'https://github.com/gtk-rs/gdk' }
#gdk-sys = { git = 'https://github.com/gtk-rs/sys' }
#glib = { git = 'https://github.com/gtk-rs/glib' }
#glib-sys = { git = 'https://github.com/gtk-rs/sys' }
#cairo-rs = { git = 'https://github.com/gtk-rs/cairo' }
#cairo-sys-rs = { git = 'https://github.com/gtk-rs/cairo' }
#pango = { git = 'https://github.com/gtk-rs/pango' }
#pango-sys = { git = 'https://github.com/gtk-rs/sys' }
#gio = { git = 'https://github.com/gtk-rs/gio' }
#pangocairo = { git = 'https://github.com/RazrFalcon/pangocairo-rs' }
neovim-lib = "0.6"
phf = "0.8"
log = "0.4"
env_logger = "0.7"
htmlescape = "0.3"
rmpv = "0.4"
percent-encoding = "1.0"
regex = "1.3"
lazy_static = "1.4"
unicode-width = "0.1"
unicode-segmentation = "1.6"
fnv = "1.0"

serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
serde_json = "1.0"

atty = "0.2"
dirs = "2.0"

whoami = "0.6.0"

[target.'cfg(unix)'.dependencies]
unix-daemonize = "0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
phf_codegen = "0.8"
build-version = "0.1.1"

[dependencies.pango]
features = ["v1_38"]
version = "0.7"

[dependencies.gtk]
version = "0.7"
features = ["v3_22"]
#git = "https://github.com/gtk-rs/gtk"

[dependencies.gtk-sys]
version = "0.9"
features = ["v3_22"]
#git = 'https://github.com/gtk-rs/sys'

